# Assignments_Batch67

Assignment-2/hello-agent/: .env  README.md  pyproject.toml
Assignment-2/hello-agent/src/hello_agent/: agent_hello.py
Assignment-3/hello-agent/: .env  README.md  pyproject.toml
Assignment-3/hello-agent/src/hello_agent/: agent_studybuddy.py
